tests/outref/TSCP11_errors.ref

select count(n1.id),n1.* from ((select 1 as id, 'test' as name) union (select 2 as id, 'test' as name)) as n1 group by n1.id;
select count(n1.*) from ((select 1 as id, 'test' as name) union (select 2 as id, 'test' as name)) as n1 group by count(n1.*);

-- Invalid aggregate function usage
select SUM(n1.*) from customers n1;
select MIN(n1.*) from customers n1;
select MAX(n1.*) from customers n1;
select AVG(n1.*) from customers n1;

-- Type mismatch
select n1.* = n1.firstname from names n1;
select count(n1.*) from ((select 1 as id, 'test' as name) union (select 2 as id, 'test' as name)) as n1 group by n1.* having (n1.* > 1);
select count(n1.*) from ((select 1 as id, 'test' as name) union (select 2 as id, 'test' as name)) as n1 group by n1.* having (n1.*);

-- Invalid subquery usage
select (select names.*) from names;

-- Missing FROM-clause entry
select firstname from names n1 group by names.*;
select n1.* from names n2;
select firstname from names group by n2.*;
select count(n2.*) from names;
select firstname from names order by n1.*;
select firstname from names order by count(n1.*);
select firstname from names having count(n1.*);
select firstname from names having n1.*;

-- Following query verifies that similar tablenames are not mistaken to be same
select count(DISTINCT n1.*) from names n11;

-- Invalid column correlation specification
select a,b,c from (select n1.* from names n1) as abcd(a,b,c,d);
[ERROR] PATH:LINENUM DATE TIME : ERR_GROUP_BY_OR_AGGREGATE_FUNCTION : Column NAME must appear in the GROUP BY clause or be used in an aggregate function
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select count(n1.id),n1.* from ((select 1 as id, 'test' as name) union (select 2 as id, 'test' as name)) as n1 group by n1.id;
[ERROR] PATH:LINENUM DATE TIME : ERR_GROUP_BY_ONLY_COLUMN_NAME : Only column names are valid in GROUP BY (not expressions or constants)
Error with syntax near (line 1, column 114):

select count(n1.*) from ((select 1 as id, 'test' as name) union (select 2 as id, 'test' as name)) as n1 group by count(n1.*);
                                                                                                                 ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select count(n1.*) from ((select 1 as id, 'test' as name) union (select 2 as id, 'test' as name)) as n1 group by count(n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function SUM cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select SUM(n1.*) from customers n1;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select SUM(n1.*) from customers n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MIN cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select MIN(n1.*) from customers n1;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select MIN(n1.*) from customers n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MAX cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select MAX(n1.*) from customers n1;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select MAX(n1.*) from customers n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function AVG cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select AVG(n1.*) from customers n1;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select AVG(n1.*) from customers n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left TABLENAME.*, right VARCHAR
Error with syntax near (line 1, column 8):

select n1.* = n1.firstname from names n1;
       ^^
Error with syntax near (line 1, column 15):

select n1.* = n1.firstname from names n1;
              ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select n1.* = n1.firstname from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left TABLENAME.*, right INTEGER
Error with syntax near (line 1, column 127):

select count(n1.*) from ((select 1 as id, 'test' as name) union (select 2 as id, 'test' as name)) as n1 group by n1.* having (n1.* > 1);
                                                                                                                              ^^
Error with syntax near (line 1, column 134):

select count(n1.*) from ((select 1 as id, 'test' as name) union (select 2 as id, 'test' as name)) as n1 group by n1.* having (n1.* > 1);
                                                                                                                                     ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select count(n1.*) from ((select 1 as id, 'test' as name) union (select 2 as id, 'test' as name)) as n1 group by n1.* having (n1.* > 1);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for boolean operations
Error with syntax near (line 1, column 126):

select count(n1.*) from ((select 1 as id, 'test' as name) union (select 2 as id, 'test' as name)) as n1 group by n1.* having (n1.*);
                                                                                                                             ^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select count(n1.*) from ((select 1 as id, 'test' as name) union (select 2 as id, 'test' as name)) as n1 group by n1.* having (n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_SUBQUERY_ONE_COLUMN : Subquery must return only one column
Error with syntax near (line 1, column 8):

select (select names.*) from names;
       ^^^^^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_FROM_ENTRY : Missing FROM-clause entry for table : NAMES
Error with syntax near (line 1, column 41):

select firstname from names n1 group by names.*;
                                        ^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names n1 group by names.*;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_FROM_ENTRY : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 8):

select n1.* from names n2;
       ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select n1.* from names n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_FROM_ENTRY : Missing FROM-clause entry for table : N2
Error with syntax near (line 1, column 38):

select firstname from names group by n2.*;
                                     ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names group by n2.*;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_FROM_ENTRY : Missing FROM-clause entry for table : N2
Error with syntax near (line 1, column 14):

select count(n2.*) from names;
             ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select count(n2.*) from names;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_FROM_ENTRY : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 38):

select firstname from names order by n1.*;
                                     ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names order by n1.*;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_FROM_ENTRY : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 44):

select firstname from names order by count(n1.*);
                                           ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_GROUP_BY_OR_AGGREGATE_FUNCTION : Column FIRSTNAME must appear in the GROUP BY clause or be used in an aggregate function
Error with syntax near (line 1, column 8):

select firstname from names order by count(n1.*);
       ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names order by count(n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_FROM_ENTRY : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 42):

select firstname from names having count(n1.*);
                                         ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_GROUP_BY_OR_AGGREGATE_FUNCTION : Column FIRSTNAME must appear in the GROUP BY clause or be used in an aggregate function
Error with syntax near (line 1, column 8):

select firstname from names having count(n1.*);
       ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names having count(n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_FROM_ENTRY : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 36):

select firstname from names having n1.*;
                                   ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names having n1.*;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_FROM_ENTRY : Missing FROM-clause entry for table : N1
Error with syntax near (line 1, column 23):

select count(DISTINCT n1.*) from names n11;
                      ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select count(DISTINCT n1.*) from names n11;
[ERROR] PATH:LINENUM DATE TIME : ERR_AS_MORE_COLUMNS : Table name 'ABCD' has 3 columns available but 4 columns specified
Error with syntax near (line 1, column 50):

select a,b,c from (select n1.* from names n1) as abcd(a,b,c,d);
                                                 ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select a,b,c from (select n1.* from names n1) as abcd(a,b,c,d);

